# tools-adoption

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  tools.yml
.github/workflows/: data_pipeline.yml  deploy_evidence.yml  pipeline.yml
data/: analytics.db
evidence/: evidence.config.yaml  package.json
evidence/pages/: daily-adoption.md  historical-adoption.md  index.md
evidence/pages/tools/: [tools].md  index.md
evidence/sources/tools_adoption/: connection.yaml  daily.sql  history.sql  overall.sql
pipeline/: deploy.py  export.py
pipeline/flows/: _01_extract_and_load.py  _02_transforms.py
superset/: Dockerfile  superset.db
transform/: dbt_project.yml  profiles.yml
transform/models/marts/: fct_tools_adoption_daily.sql  fct_tools_adoption_history.sql  fct_tools_adoption_overall.sql
transform/models/staging/: sources.yml  stg_analytics__raw.sql
